// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (general) basic updates the documentation 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

| Name                           | Description            | 💼    | 🔧 | 💡 |
| :----------------------------- | :--------------------- | :---- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    |
| [no-baz](docs/rules/no-baz.md) | Description of no-boz. |       |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |

<!-- end auto-generated rules list -->
more content."
`;

exports[`generate (general) basic updates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/latest/use/core-concepts#rule-suggestions).

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation"
`;

exports[`generate (general) basic updates the documentation 3`] = `
"# Description of no-bar (\`test/no-bar\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, 🎨 \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

<!-- end auto-generated rule header -->
## Rule details
details"
`;

exports[`generate (general) basic updates the documentation 4`] = `
"# Description of no-boz (\`no-baz\`)

<!-- end auto-generated rule header -->
## Rule details
details"
`;
